--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     ul { list-style: none; padding: 0; }
     li { margin-bottom: 10px; }
 
-    /* PORTFOLIO */
     #portfolio {
       background-color: #f9f9f7;
       padding: 70px 0;
@@ -79,13 +78,11 @@
       gap: 12px;
       scroll-behavior: smooth;
       padding-bottom: 10px;
-      margin-bottom: 25px;
     }
 
     .portfolio-slider::-webkit-scrollbar {
       height: 8px;
     }
-
     .portfolio-slider::-webkit-scrollbar-thumb {
       background: #c5d3c2;
       border-radius: 10px;
@@ -99,7 +96,6 @@
 
     .portfolio-item {
       margin-bottom: 80px;
-      overflow: visible;
     }
 
     .portfolio-item h3 {
@@ -108,8 +104,8 @@
     }
 
     .portfolio-item p {
-      color: #2f2f2f;
-      line-height: 1.7;
+      color: #4f5d4f;
+      line-height: 1.6;
       font-weight: 300;
     }
 
@@ -137,15 +133,27 @@
       border-top: 1px solid #eee;
     }
 
-    /* Icona YouTube */
     .youtube-icon {
-      margin-top: 20px;
+      width: 45px;
+      height: 45px;
+      background-color: #a8bba3;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 25px auto 0;
+      transition: background-color 0.3s;
     }
 
-    .youtube-icon svg:hover rect {
-      fill: #8fae91;
+    .youtube-icon:hover {
+      background-color: #90a88f;
     }
 
+    .youtube-icon svg {
+      width: 18px;
+      height: 18px;
+      fill: white;
+    }
   </style>
 </head>
 
@@ -158,14 +166,11 @@
       📍 Cavriglia (AR) · 19/02/1999
     </p>
 
-    <div class="youtube-icon">
-      <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" aria-label="Canale YouTube di Lucrezia Dori">
-        <svg viewBox="0 0 100 100" width="36" height="36">
-          <rect x="5" y="5" width="90" height="90" rx="20" ry="20" fill="#9cb89f" />
-          <polygon points="40,30 70,50 40,70" fill="white" />
-        </svg>
-      </a>
-    </div>
+    <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" class="youtube-icon" title="YouTube">
+      <svg viewBox="0 0 24 24">
+        <path d="M10 15L15 12L10 9V15ZM21 8C21 8 21 5.5 20.5 4.5C20 3.5 19 3.5 18.5 3.5C15 3.25 12 3.25 12 3.25H12C12 3.25 9 3.25 5.5 3.5C5 3.5 4 3.5 3.5 4.5C3 5.5 3 8 3 8V16C3 16 3 18.5 3.5 19.5C4 20.5 5 20.5 5.5 20.5C9 20.75 12 20.75 12 20.75H12C12 20.75 15 20.75 18.5 20.5C19 20.5 20 20.5 20.5 19.5C21 18.5 21 16 21 16V8Z" />
+      </svg>
+    </a>
   </header>
 
   <section>
@@ -191,107 +196,81 @@
     </ul>
   </section>
 
-  <!-- ===================== -->
-  <!--       PORTFOLIO      -->
-  <!-- ===================== -->
-  <section id="portfolio">
-    <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
-      <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
+<section id="portfolio">
+  <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
+    <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-      <!-- TESI -->
-      <div class="portfolio-item">
-        <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
-        <div class="portfolio-slider">
-          <img src="progetto_tesi/cover.jpg" alt="Cover tesi">
-        </div>
-        <p>
-          La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. Il lavoro propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
-        </p>
-        <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
+    <div class="portfolio-item">
+      <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
+      <div class="portfolio-slider">
+        <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
       </div>
-
-      <!-- FOTOGRAFIA -->
-      <div class="portfolio-item">
-        <h3>Progetto Fotografico — Autoritratti e Luce</h3>
-        <div class="portfolio-slider">
-          <img src="progetto1_fotografia/cover.jpg">
-          <img src="progetto1_fotografia/img1.jpg">
-          <img src="progetto1_fotografia/img2.jpg">
-          <img src="progetto1_fotografia/img3.jpg">
-          <img src="progetto1_fotografia/img4.jpg">
-          <img src="progetto1_fotografia/img5.jpg">
-          <img src="progetto1_fotografia/img6.jpg">
-          <img src="progetto1_fotografia/img7.jpg">
-          <img src="progetto1_fotografia/img8.jpg">
-          <img src="progetto1_fotografia/img9.jpg">
-          <img src="progetto1_fotografia/img10.jpg">
-          <img src="progetto1_fotografia/img11.jpg">
-          <img src="progetto1_fotografia/img12.jpg">
-          <img src="progetto1_fotografia/img13.jpg">
-          <img src="progetto1_fotografia/img14.jpg">
-          <img src="progetto1_fotografia/img15.jpg">
-          <img src="progetto1_fotografia/img16.jpg">
-        </div>
-        <p>
-          Serie di <strong>autoritratti</strong> realizzati utilizzando uno specchio per riflettere la luce del sole. Il riflesso, completamente bianco, diventa un <em>non-colore</em> che però comprende in sé tutti i colori dello spettro. In stampa, il bianco si trasforma in assenza visiva, evocando un’immagine che esiste soltanto come presenza luminosa: un dialogo tra corpo, luce e materia.
-        </p>
-        <p style="font-size:0.9rem; font-style:italic;">
-          “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, quando contempliamo le bianche profondità della Via Lattea? O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
-          <br>— <strong>Herman Melville, Moby Dick, capitolo 42</strong>
-        </p>
-        <p>
-          Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank"><strong>Premio Combat Prize</strong></a>.
-        </p>
-      </div>
-
-      <!-- ROMETTI -->
-      <div class="portfolio-item">
-        <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
-        <div class="portfolio-slider">
-          <img src="premio_rometti_ceramica/cover.jpg">
-          <img src="premio_rometti_ceramica/img1.jpg">
-          <img src="premio_rometti_ceramica/img2.jpg">
-          <img src="premio_rometti_ceramica/img3.jpg">
-          <img src="premio_rometti_ceramica/img4.jpg">
-          <img src="premio_rometti_ceramica/img5.jpg">
-          <img src="premio_rometti_ceramica/img6.jpg">
-        </div>
-        <p>
-          Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e allo stesso tempo funzionali. La ritmicità della pianta e la sua forma è costruita secondo una logica e un’utilità necessaria per la sua sopravvivenza.
-        </p>
-        <p>
-          Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto ambientale, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte. La natura non è esplicitamente rappresentata, ma permane quale paradigma per la nuova realtà che si crea. 
-        </p>
-        <p>
-          Il concetto nasce dal <strong>recupero dell’elemento naturale</strong> per ricercare un equilibrio tra artificio e natura, tra oggettualità e naturalità. Il materiale argilloso prevede la manipolazione diretta della sostanza naturale che lo trasforma in qualcosa di distinto, in un oggetto. Questo vaso diventa la sintesi del fiore dell’equiseto, realizzato successivamente al processo di tornitura attraverso la sottrazione della materia.
-        </p>
-        <p>
-          Progetto realizzato per la partecipazione al <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank"><strong>Premio Rometti</strong></a>, bandito dall’azienda Rometti in Umbria.
-        </p>
-      </div>
-
-      <!-- OREFICERIA -->
-      <div class="portfolio-item">
-        <h3>Progetto di Oreficeria — Forme Marine</h3>
-        <div class="portfolio-slider">
-          <img src="progetto2_oreficeria/cover.jpg">
-          <img src="progetto2_oreficeria/img1.jpg">
-          <img src="progetto2_oreficeria/img2.jpg">
-          <img src="progetto2_oreficeria/img3.jpg">
-          <img src="progetto2_oreficeria/img4.jpg">
-          <img src="progetto2_oreficeria/img5.jpg">
-          <img src="progetto2_oreficeria/img6.jpg">
-          <img src="progetto2_oreficeria/img7.jpg">
-        </div>
-        <p>
-          Collezione di <strong>anelli ispirati alle forme naturali marine</strong>, realizzati interamente a mano con la tecnica della <em>cera persa</em>. Le strutture organiche evocano coralli e conchiglie, trasformando la materia in piccole sculture preziose. Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche e unire la sensibilità del design contemporaneo all’artigianato orafa.
-        </p>
-      </div>
+      <p>
+        La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. Il lavoro propone il design come atto di cura, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
+      </p>
+      <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
     </div>
-  </section>
+
+    <div class="portfolio-item">
+      <h3>Progetto Fotografico — Autoritratti e Luce</h3>
+      <div class="portfolio-slider">
+        <img src="progetto1_fotografia/cover.jpg">
+        <img src="progetto1_fotografia/img2.jpg">
+        <img src="progetto1_fotografia/img3.jpg">
+        <img src="progetto1_fotografia/img4.jpg">
+        <img src="progetto1_fotografia/img5.jpg">
+        <img src="progetto1_fotografia/img6.jpg">
+        <img src="progetto1_fotografia/img9.jpg">
+        <img src="progetto1_fotografia/img10.jpg">
+        <img src="progetto1_fotografia/img12.jpg">
+        <img src="progetto1_fotografia/img13.jpg">
+        <img src="progetto1_fotografia/img14.jpg">
+      </div>
+      <p>
+        Serie di autoritratti dove la luce del sole rimbalza su uno specchio generando un riflesso totalmente bianco. Bianco. Un non-colore. Ma che comprende tutti i colori dello spettro.  
+        <em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo...” — Herman Melville, Moby Dick, capitolo 42.</em><br>
+        Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
+      </p>
+    </div>
+
+    <div class="portfolio-item">
+      <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
+      <div class="portfolio-slider">
+        <img src="premio_rometti_ceramica/cover.jpg">
+        <img src="premio_rometti_ceramica/img1.jpg">
+        <img src="premio_rometti_ceramica/img3.jpg">
+        <img src="premio_rometti_ceramica/img4.jpg">
+        <img src="premio_rometti_ceramica/img5.jpg">
+        <img src="premio_rometti_ceramica/img6.jpg">
+      </div>
+      <p>
+        Mi sono ispirata alle opere del fotografo tedesco Karl Blossfeldt, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e funzionali. La ritmicità della pianta è costruita secondo una logica necessaria alla sua sopravvivenza. Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte.  
+        L’idea parte dal concetto di recupero dell’elemento naturale alla ricerca di un equilibrio tra artificio e natura, tra oggettualità e naturalità. Il materiale argilloso prevede la manipolazione diretta della sostanza naturale che lo trasforma in oggetto. Questo vaso diventa la sintesi del fiore dell’equiseto, nelle cui forme si ritrovano le dilatazioni e contrazioni presenti nella pianta, realizzato dopo la tornitura tramite sottrazione di materia.  
+        Progetto realizzato per la partecipazione a un bando dell’azienda Rometti in Umbria.
+      </p>
+    </div>
+
+    <div class="portfolio-item">
+      <h3>Progetto di Oreficeria — Forme Marine</h3>
+      <div class="portfolio-slider">
+        <img src="progetto2_oreficeria/cover.jpg">
+        <img src="progetto2_oreficeria/img1.jpg">
+        <img src="progetto2_oreficeria/img2.jpg">
+        <img src="progetto2_oreficeria/img3.jpg">
+        <img src="progetto2_oreficeria/img4.jpg">
+        <img src="progetto2_oreficeria/img5.jpg">
+        <img src="progetto2_oreficeria/img6.jpg">
+        <img src="progetto2_oreficeria/img7.jpg">
+      </div>
+      <p>
+        Collezione di anelli ispirati alle forme naturali marine, realizzati a mano con la tecnica della cera persa. Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, trasformando la materia in preziosa testimonianza del mondo sommerso. Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, unendo la sensibilità del design contemporaneo alla manualità dell’artigianato orafa.
+      </p>
+    </div>
+  </div>
+</section>
 
   <footer>
-    © 2025 Lucrezia Dori — Tutti i diritti riservati
+    © 2025 Lucrezia Dori – Tutti i diritti riservati
   </footer>
 </body>
 </html>
