--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
     }
 
     .youtube-icon {
-      width: 45px;
-      height: 45px;
+      width: 35px;
+      height: 35px;
       background-color: #a8bba3;
-      border-radius: 10px;
+      border-radius: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -150,8 +150,8 @@
     }
 
     .youtube-icon svg {
-      width: 18px;
-      height: 18px;
+      width: 14px;
+      height: 14px;
       fill: white;
     }
   </style>
@@ -168,7 +168,8 @@
 
     <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" class="youtube-icon" title="YouTube">
       <svg viewBox="0 0 24 24">
-        <path d="M10 15L15 12L10 9V15ZM21 8C21 8 21 5.5 20.5 4.5C20 3.5 19 3.5 18.5 3.5C15 3.25 12 3.25 12 3.25H12C12 3.25 9 3.25 5.5 3.5C5 3.5 4 3.5 3.5 4.5C3 5.5 3 8 3 8V16C3 16 3 18.5 3.5 19.5C4 20.5 5 20.5 5.5 20.5C9 20.75 12 20.75 12 20.75H12C12 20.75 15 20.75 18.5 20.5C19 20.5 20 20.5 20.5 19.5C21 18.5 21 16 21 16V8Z" />
+        <path d="M10 15L15 12L10 9V15Z" />
+        <path d="M21 8C21 8 21 5.5 20.5 4.5C20 3.5 19 3.5 18.5 3.5C15 3.25 12 3.25 12 3.25C12 3.25 9 3.25 5.5 3.5C5 3.5 4 3.5 3.5 4.5C3 5.5 3 8 3 8V16C3 16 3 18.5 3.5 19.5C4 20.5 5 20.5 5.5 20.5C9 20.75 12 20.75 12 20.75C12 20.75 15 20.75 18.5 20.5C19 20.5 20 20.5 20.5 19.5C21 18.5 21 16 21 16V8Z" />
       </svg>
     </a>
   </header>
@@ -244,9 +245,12 @@
         <img src="premio_rometti_ceramica/img6.jpg">
       </div>
       <p>
-        Mi sono ispirata alle opere del fotografo tedesco Karl Blossfeldt, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e funzionali. La ritmicità della pianta è costruita secondo una logica necessaria alla sua sopravvivenza. Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte.  
-        L’idea parte dal concetto di recupero dell’elemento naturale alla ricerca di un equilibrio tra artificio e natura, tra oggettualità e naturalità. Il materiale argilloso prevede la manipolazione diretta della sostanza naturale che lo trasforma in oggetto. Questo vaso diventa la sintesi del fiore dell’equiseto, nelle cui forme si ritrovano le dilatazioni e contrazioni presenti nella pianta, realizzato dopo la tornitura tramite sottrazione di materia.  
-        Progetto realizzato per la partecipazione a un bando dell’azienda Rometti in Umbria.
+        Mi sono ispirata alle opere del fotografo tedesco Karl Blossfeldt, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e funzionali.  
+        La ritmicità della pianta è costruita secondo una logica necessaria alla sua sopravvivenza. Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte.  
+        L’idea parte dal concetto di recupero dell’elemento naturale alla ricerca di un equilibrio tra artificio e natura, tra oggettualità e naturalità.  
+        Il materiale argilloso prevede la manipolazione diretta della sostanza naturale che lo trasforma in oggetto.  
+        Questo vaso diventa la sintesi del fiore dell’equiseto, nelle cui forme si ritrovano le dilatazioni e contrazioni presenti nella pianta, realizzato dopo la tornitura tramite sottrazione di materia.  
+        Progetto realizzato per la partecipazione a un bando dell’azienda Rometti in Umbria (<a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>).
       </p>
     </div>
 
