--- a/index.html
+++ b/index.html
@@ -134,24 +134,29 @@
     }
 
     .youtube-icon {
-      width: 35px;
-      height: 35px;
-      background-color: #a8bba3;
-      border-radius: 8px;
+      display: flex;
+      justify-content: center;
+      margin-top: 25px;
+    }
+
+    .youtube-link {
+      width: 45px;
+      height: 45px;
+      background-color: #a6bfa4;
+      border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 25px auto 0;
       transition: background-color 0.3s;
     }
 
-    .youtube-icon:hover {
-      background-color: #90a88f;
+    .youtube-link:hover {
+      background-color: #90a58e;
     }
 
-    .youtube-icon svg {
-      width: 14px;
-      height: 14px;
+    .youtube-link svg {
+      width: 22px;
+      height: 22px;
       fill: white;
     }
   </style>
@@ -165,13 +170,13 @@
       📞 339 33133592 · 📧 <a href="mailto:lucrezia.dori99@gmail.com">lucrezia.dori99@gmail.com</a><br>
       📍 Cavriglia (AR) · 19/02/1999
     </p>
-
-    <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" class="youtube-icon" title="YouTube">
-      <svg viewBox="0 0 24 24">
-        <path d="M10 15L15 12L10 9V15Z" />
-        <path d="M21 8C21 8 21 5.5 20.5 4.5C20 3.5 19 3.5 18.5 3.5C15 3.25 12 3.25 12 3.25C12 3.25 9 3.25 5.5 3.5C5 3.5 4 3.5 3.5 4.5C3 5.5 3 8 3 8V16C3 16 3 18.5 3.5 19.5C4 20.5 5 20.5 5.5 20.5C9 20.75 12 20.75 12 20.75C12 20.75 15 20.75 18.5 20.5C19 20.5 20 20.5 20.5 19.5C21 18.5 21 16 21 16V8Z" />
-      </svg>
-    </a>
+    <div class="youtube-icon">
+      <a class="youtube-link" href="https://www.youtube.com/@lucreziadori4895" target="_blank" aria-label="YouTube">
+        <svg viewBox="0 0 24 24">
+          <path d="M10 15l5.19-3L10 9v6zm11-3c0-2.5-.3-4.2-.7-5.4-.4-1.2-1.3-2.1-2.5-2.5C16.6 3 12 3 12 3s-4.6 0-5.8.1c-1.2.4-2.1 1.3-2.5 2.5C3.3 7.8 3 9.5 3 12s.3 4.2.7 5.4c.4 1.2 1.3 2.1 2.5 2.5C7.4 21 12 21 12 21s4.6 0 5.8-.1c1.2-.4 2.1-1.3 2.5-2.5.4-1.2.7-2.9.7-5.4z"/>
+        </svg>
+      </a>
+    </div>
   </header>
 
   <section>
@@ -197,84 +202,86 @@
     </ul>
   </section>
 
-<section id="portfolio">
-  <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
-    <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
+  <section id="portfolio">
+    <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
+      <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-    <div class="portfolio-item">
-      <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
-      <div class="portfolio-slider">
-        <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+      <!-- TESI -->
+      <div class="portfolio-item">
+        <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
+        <div class="portfolio-slider">
+          <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+        </div>
+        <p>
+          La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. Il lavoro propone il design come atto di cura, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
+        </p>
+        <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
       </div>
-      <p>
-        La mia tesi esplora il design come pratica di riparazione, intesa non solo in senso tecnico ma anche sociale, culturale ed ecologico. Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione. Il lavoro propone il design come atto di cura, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità.
-      </p>
-      <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
-    </div>
 
-    <div class="portfolio-item">
-      <h3>Progetto Fotografico — Autoritratti e Luce</h3>
-      <div class="portfolio-slider">
-        <img src="progetto1_fotografia/cover.jpg">
-        <img src="progetto1_fotografia/img2.jpg">
-        <img src="progetto1_fotografia/img3.jpg">
-        <img src="progetto1_fotografia/img4.jpg">
-        <img src="progetto1_fotografia/img5.jpg">
-        <img src="progetto1_fotografia/img6.jpg">
-        <img src="progetto1_fotografia/img9.jpg">
-        <img src="progetto1_fotografia/img10.jpg">
-        <img src="progetto1_fotografia/img12.jpg">
-        <img src="progetto1_fotografia/img13.jpg">
-        <img src="progetto1_fotografia/img14.jpg">
+      <!-- FOTOGRAFIA -->
+      <div class="portfolio-item">
+        <h3>Progetto Fotografico — Autoritratti e Luce</h3>
+        <div class="portfolio-slider">
+          <img src="progetto1_fotografia/img9.jpg" alt="Cover progetto fotografico">
+          <img src="progetto1_fotografia/img2.jpg">
+          <img src="progetto1_fotografia/img3.jpg">
+          <img src="progetto1_fotografia/img4.jpg">
+          <img src="progetto1_fotografia/img5.jpg">
+          <img src="progetto1_fotografia/img6.jpg">
+          <img src="progetto1_fotografia/img10.jpg">
+          <img src="progetto1_fotografia/img12.jpg">
+          <img src="progetto1_fotografia/img13.jpg">
+          <img src="progetto1_fotografia/img14.jpg">
+        </div>
+        <p>
+          Serie di autoritratti dove la luce del sole rimbalza su uno specchio generando un riflesso totalmente bianco. Bianco. Un non-colore. Ma che comprende tutti i colori dello spettro.
+          <em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo…” — Herman Melville, Moby Dick, capitolo 42.</em><br>
+          Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
+        </p>
       </div>
-      <p>
-        Serie di autoritratti dove la luce del sole rimbalza su uno specchio generando un riflesso totalmente bianco. Bianco. Un non-colore. Ma che comprende tutti i colori dello spettro.  
-        <em>“È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo...” — Herman Melville, Moby Dick, capitolo 42.</em><br>
-        Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
-      </p>
-    </div>
 
-    <div class="portfolio-item">
-      <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
-      <div class="portfolio-slider">
-        <img src="premio_rometti_ceramica/cover.jpg">
-        <img src="premio_rometti_ceramica/img1.jpg">
-        <img src="premio_rometti_ceramica/img3.jpg">
-        <img src="premio_rometti_ceramica/img4.jpg">
-        <img src="premio_rometti_ceramica/img5.jpg">
-        <img src="premio_rometti_ceramica/img6.jpg">
+      <!-- ROMETTI -->
+      <div class="portfolio-item">
+        <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
+        <div class="portfolio-slider">
+          <img src="premio_rometti_ceramica/cover.jpg">
+          <img src="premio_rometti_ceramica/img1.jpg">
+          <img src="premio_rometti_ceramica/img3.jpg">
+          <img src="premio_rometti_ceramica/img4.jpg">
+          <img src="premio_rometti_ceramica/img5.jpg">
+          <img src="premio_rometti_ceramica/img6.jpg">
+        </div>
+        <p>
+          Mi sono ispirata alle opere del fotografo tedesco Karl Blossfeldt, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e allo stesso tempo funzionali.  
+          La ritmicità della pianta e la sua forma è costruita secondo una logica e un’utilità necessaria per la sua sopravvivenza. Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto ambientale, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte.  
+          Il progetto è stato realizzato per la partecipazione a un bando presso l’azienda Rometti in Umbria.  
+          <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">→ Premio Rometti</a>
+        </p>
       </div>
-      <p>
-        Mi sono ispirata alle opere del fotografo tedesco Karl Blossfeldt, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, presentando una natura intrinsecamente artistica, produttrice di organismi belli e funzionali.  
-        La ritmicità della pianta è costruita secondo una logica necessaria alla sua sopravvivenza. Gli equiseti fotografati da Blossfeldt, astratti dal loro contesto, diventano simbolo di una forma ornamentale, di una natura che si manifesta come arte.  
-        L’idea parte dal concetto di recupero dell’elemento naturale alla ricerca di un equilibrio tra artificio e natura, tra oggettualità e naturalità.  
-        Il materiale argilloso prevede la manipolazione diretta della sostanza naturale che lo trasforma in oggetto.  
-        Questo vaso diventa la sintesi del fiore dell’equiseto, nelle cui forme si ritrovano le dilatazioni e contrazioni presenti nella pianta, realizzato dopo la tornitura tramite sottrazione di materia.  
-        Progetto realizzato per la partecipazione a un bando dell’azienda Rometti in Umbria (<a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>).
-      </p>
-    </div>
 
-    <div class="portfolio-item">
-      <h3>Progetto di Oreficeria — Forme Marine</h3>
-      <div class="portfolio-slider">
-        <img src="progetto2_oreficeria/cover.jpg">
-        <img src="progetto2_oreficeria/img1.jpg">
-        <img src="progetto2_oreficeria/img2.jpg">
-        <img src="progetto2_oreficeria/img3.jpg">
-        <img src="progetto2_oreficeria/img4.jpg">
-        <img src="progetto2_oreficeria/img5.jpg">
-        <img src="progetto2_oreficeria/img6.jpg">
-        <img src="progetto2_oreficeria/img7.jpg">
+      <!-- OREFICERIA -->
+      <div class="portfolio-item">
+        <h3>Progetto di Oreficeria — Forme Marine</h3>
+        <div class="portfolio-slider">
+          <img src="progetto2_oreficeria/cover.jpg">
+          <img src="progetto2_oreficeria/img1.jpg">
+          <img src="progetto2_oreficeria/img2.jpg">
+          <img src="progetto2_oreficeria/img3.jpg">
+          <img src="progetto2_oreficeria/img4.jpg">
+          <img src="progetto2_oreficeria/img5.jpg">
+          <img src="progetto2_oreficeria/img6.jpg">
+          <img src="progetto2_oreficeria/img7.jpg">
+        </div>
+        <p>
+          Una collezione di anelli ispirati alle forme naturali marine, realizzati interamente a mano con la tecnica della cera persa. Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, trasformando la materia in preziosa testimonianza del mondo sommerso.
+        </p>
       </div>
-      <p>
-        Collezione di anelli ispirati alle forme naturali marine, realizzati a mano con la tecnica della cera persa. Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, trasformando la materia in preziosa testimonianza del mondo sommerso. Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, unendo la sensibilità del design contemporaneo alla manualità dell’artigianato orafa.
-      </p>
+
     </div>
-  </div>
-</section>
+  </section>
 
   <footer>
-    © 2025 Lucrezia Dori – Tutti i diritti riservati
+    © 2025 Lucrezia Dori — Tutti i diritti riservati
   </footer>
 </body>
 </html>
